--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,37 @@
+# ??? ?? ????????????
 spring.application.name=bank-wallet-rest-api
+
+# Server configuration
+server.port=8080
+
+# H2 Database - In-Memory
+spring.datasource.url=jdbc:h2:mem:bankdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# seed-data.sql
+spring.jpa.hibernate.ddl-auto=none
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.data-locations=classpath:seed-data.sql
+spring.jpa.defer-datasource-initialization=true
+
+# JPA / Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# APILayer Configuration
+apilayer.api-key=2b234cc15a1aa2f39dce2ea46880a7de
+apilayer.base-url=http://api.exchangeratesapi.io/v1/
+
+# Logging
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=INFO
+logging.level.com.example.bankwalletrestapi=DEBUG
+logging.level.org.springframework.jdbc.datasource.init=DEBUG
